# kernelmeter

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: index.html
examples/: matmul.py  softmax.py  vector_add.py
scripts/: modal_gpu_test.py  update_webdb.py
src/kernelmeter/: __init__.py  attrs.py  bench.py  ceiling.py  cli.py  cudadrv.py  extras.py  gpus.py  hipdrv.py  htmlreport.py  llm.py  nvml.py  occupancy.py  peaks.py  rocmsmi.py  roofline.py
tests/: conftest.py  test_attrs.py  test_bench_math.py  test_bench_roofline.py  test_cli.py  test_cli_new_commands.py  test_extras.py  test_gpus.py  test_llm.py  test_nvml.py  test_occupancy.py  test_peaks.py  test_report_and_compare_cli.py  test_rocm.py  test_roofline.py  test_tensor_peaks.py  test_webdemo.py
