[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kernelmeter"
version = "0.8.0"
description = "Query every CUDA device attribute without profiling a kernel, and benchmark your kernels against the hardware's speed of light."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "nuemaan" }]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Hardware",
]
keywords = ["cuda", "gpu", "benchmark", "profiling", "device-attributes", "speed-of-light"]

[project.optional-dependencies]
# The bench harness times kernels with CUDA events via torch.
bench = ["torch"]
dev = ["pytest>=7"]

[project.scripts]
kernelmeter = "kernelmeter.cli:main"

[project.urls]
Homepage = "https://github.com/nuemaan/kernelmeter"
Issues = "https://github.com/nuemaan/kernelmeter/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kernelmeter = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
